@@ -7,7 +7,7 @@ This is inline math: :math:`a^2 + b^2 = c^2`.
 
 .. math::
 
-   a^2 + b^2 = c^2
+   a + 1 < b
 
 .. math::
    :label: foo
@@ -22,5 +22,10 @@ This is inline math: :math:`a^2 + b^2 = c^2`.
 .. math::
 
    n \in \mathbb N
+
+.. math::
+   :nowrap:
+
+   a + 1 < b
 
 Referencing equation :eq:`foo`.
